# home-assistant-comfoconnect

./: .gitignore  Makefile  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yaml
custom_components/comfoconnect/: __init__.py  binary_sensor.py  button.py  config_flow.py  connection_sensor.py  const.py  fan.py  manifest.json  quality_scale.yaml  select.py  sensor.py  strings.json
custom_components/comfoconnect/translations/: en.json
