[tool.poetry]
name = "home-assistant-comfoconnect"
version = "0.1.0"
description = ""
authors = ["Michaël Arnauts <michael.arnauts@gmail.com>"]
readme = "README.md"
packages = [{include = "home_assistant_comfoconnect"}]

[tool.poetry.dependencies]
python = "^3.9"
aiocomfoconnect = "^0.1.9"

[tool.poetry.group.dev.dependencies]
homeassistant = "^2022.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
